@@ -14,13 +14,19 @@
 	* inst/include/Rcpp/utils/tinyformat.h: Idem
 	* inst/include/Rcpp/longlong.h: Idem, unconditional RCPP_HAS_LONG_LONG_TYPES
 
+	* src/api.cpp: Remove explicit RCPP_HAS_LONG_LONG_TYPES as availability is
+	both implicit and ensured
+	* inst/include/Rcpp/algorithm.h: Idem
+	* inst/include/Rcpp/traits/is_arithmetic.h: Idem
+	* inst/include/Rcpp/traits/longlong.h: Idem
+
 2025-03-21  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro version and date
 	* inst/include/Rcpp/config.h: Idem
 
 	* inst/include/Rcpp/String.h: Remove explicit RCPP_USING_CXX11 as
-	use of C++11 (or newer) is both implicit and ensuredIdem
+	use of C++11 (or newer) is both implicit and ensured
 	* inst/include/Rcpp/macros/dispatch.h: Idem
 	* inst/include/Rcpp/platform/compiler.h: Idem
 	* inst/include/Rcpp/unwindProtect.h: Idem
